--- a/aulas/pom.xml
+++ b/aulas/pom.xml
@@ -26,12 +26,11 @@
             <version>8.0.21</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/com.oracle.jdbc/ojdbc8 -->
-<!--        <dependency>
-            <groupId>com.oracle.jdbc</groupId>
-            <artifactId>ojdbc8</artifactId>
-            <version>12.2.0.1</version>
-        </dependency>-->
-
+        <!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc10 -->
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc10</artifactId>
+            <version>19.7.0.0</version>
+        </dependency>
     </dependencies>
 </project>
